--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,16 +31,23 @@ jobs:
           key: v1-dependencies-{{ checksum "requirements.txt" }}
         
       # run tests!
-      - run:
-          name: Run Pytests here
-          command: |
-            . venv/bin/activate
-            pytest
+      # - run:
+      #     name: Run Pytests here
+      #     command: |
+      #       . venv/bin/activate
+      #       pytest
 
       - run:
-          name: Package and Deploy to S3
+          name: Zip and Upload to S3 bucket w/ metadata
           command: |
             . venv/bin/activate
+            zip -r9 generic_repo.zip $PWD
+
+            GITHASH=$(git rev-parse HEAD)
+
+            aws s3 cp generic_repo.zip s3://ami-production-dist/generic_repo/ --metadata \
+            '{"githash": "'"$GITHASH"'"}'
+
             
 
       - store_artifacts:
