--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 atomicwrites==1.2.1
 attrs==18.2.0
+awscli==1.16.120
 boto3==1.9.73
-botocore==1.12.73
+botocore==1.12.110
+colorama==0.3.9
 docutils==0.14
 jmespath==0.9.3
 more-itertools==5.0.0
 pluggy==0.8.0
 py==1.7.0
+pyasn1==0.4.5
 pytest==4.0.2
 python-dateutil==2.7.5
-s3transfer==0.1.13
+PyYAML==3.13
+rsa==3.4.2
+s3transfer==0.2.0
 six==1.12.0
 urllib3==1.24.1
